# desi-jarvis

./: .gitignore  .vault.enc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  config.json  main.py  package.json  pyproject.toml  requirements.txt  test_speed.py  test_speed_2.py
.antigravitycli/: 2654e682-6f7b-47cd-b043-67288910759e.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
assistant/: __init__.py  automation.py  brain.py  commands.py  voice.py
src/core/: server.py  vault.py  websocket.py
src/core/automation/: desktop.py  web.py
src/renderer/: index.html  package-lock.json  package.json
src/renderer/src/: App.tsx  index.css
src/renderer/src/components/: CoreOrb.tsx  CoreScene.tsx  HexGrid.tsx  HoloCli.tsx  HoloTerminal.tsx  HudRings.tsx  ParticleField.tsx  SystemReactor.tsx  VoiceWave.tsx
src/renderer/src/hooks/: useSocket.ts
src/renderer/src/store/: useStore.ts
